bananas added to things index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   help: "Text %{thing} code to vote. Msg &amp; data rates may apply. Visit %{help_website} for help or reply STOP to remove your phone number."
   stop: "Your phone number has been removed and you will no longer recieve messages from us."
   voted: "Thanks for voting! Msg &amp; data rates may apply. Reply HELP for help, STOP to cancel."
+  voted_already: "Already voted, yo. Msg &amp; data rates may apply. Reply HELP for help, STOP to cancel."
   invalid_code: "Invalid %{thing} code. Try again? Msg &amp; data rates may apply. Reply HELP for help, STOP to cancel."
   pre_contest_message: "Vote for best %{thing} on %{start_date}! Msg &amp; data rates may apply. Reply HELP for help, STOP to cancel."
   post_contest_message: "Thanks for voting, everyone! Winner will be announced soon! Msg &amp; data rates may apply. Reply HELP for help, STOP to cancel."
